--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <a class="nav-link " aria-current="page" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/service.html">Service</a>
+          <a class="nav-link" aria-current="page" href="./service.html">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/contact.html">Contact us</a>
+          <a class="nav-link" aria-current="page" href="./contact.html">Contact us</a>
         </li>
       </ul>
     </div>
@@ -45,13 +45,13 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" id="#home">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/img/IMG1.JPG" class="d-block w-100">
+      <img src="./img/IMG1.jpg" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="/img/IMG3.jpg" class="d-block w-100">
+      <img src="./img/IMG3.jpg" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="/img/IMG2.JPG" class="d-block w-100">
+      <img src="./img/IMG2.jpg" class="d-block w-100">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
