--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div id="carouselExampleFade" class="carousel slide carousel-fade" id="#home">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./img/IMG1.jpg" class="d-block w-100">
+      <img src="./IMG1.jpg" class="d-block w-100">
     </div>
     <div class="carousel-item">
       <img src="./img/IMG3.jpg" class="d-block w-100">
