--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <img src="./img/IMG3.jpg" class="d-block w-100">
     </div>
     <div class="carousel-item">
-      <img src="./img/IMG2.jpg" class="d-block w-100">
+      <img src="./IMG2.jpg" class="d-block w-100">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -73,14 +73,14 @@
     <p class="gallery-subtitle">Showcasing artistry, beauty, and flawless transformations</p>
 
     <div class="gallery-grid">
-      <div class="gallery-item"><img src="/img/GAL1.jpg" alt="Makeup look 1"></div>
-      <div class="gallery-item"><img src="/img/GAL2.jpg" alt="Makeup look 2"></div>
-      <div class="gallery-item"><img src="/img/GAL3.jpg" alt="Makeup look 3"></div>
-      <div class="gallery-item"><img src="/img/GAL4.jpg" alt="Makeup look 4"></div>
-      <div class="gallery-item"><img src="/img/GAL5.jpg" alt="Makeup look 5"></div>
-      <div class="gallery-item"><img src="/img/GAL6.jpg" alt="Makeup look 6"></div>
-      <div class="gallery-item"><img src="/img/GAL7.jpg" alt="Makeup look 7"></div>
-      <div class="gallery-item"><img src="/img/GAL8.jpg" alt="Makeup look 8"></div>
+      <div class="gallery-item"><img src="./img/GAL1.jpg" alt="Makeup look 1"></div>
+      <div class="gallery-item"><img src="./img/GAL2.jpg" alt="Makeup look 2"></div>
+      <div class="gallery-item"><img src="./img/GAL3.jpg" alt="Makeup look 3"></div>
+      <div class="gallery-item"><img src="./img/GAL4.jpg" alt="Makeup look 4"></div>
+      <div class="gallery-item"><img src="./img/GAL5.jpg" alt="Makeup look 5"></div>
+      <div class="gallery-item"><img src="./img/GAL6.jpg" alt="Makeup look 6"></div>
+      <div class="gallery-item"><img src="./img/GAL7.jpg" alt="Makeup look 7"></div>
+      <div class="gallery-item"><img src="./img/GAL8.jpg" alt="Makeup look 8"></div>
     </div>
   </div>
 </section>
