--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -21,19 +21,19 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+          <a class="nav-link"href="./index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/index.html">Our works</a>
+          <a class="nav-link" href="./index.html#gallery">Our works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " aria-current="page" href="/index.html">About</a>
+          <a class="nav-link " href="./index.html#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/service.html">Service</a>
+          <a class="nav-link" href="./service.html">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/contact.html">Contact us</a>
+          <a class="nav-link" href="./contact.html">Contact us</a>
         </li>
       </ul>
     </div>
@@ -48,57 +48,57 @@
 <div id="service">
   <div class="card-scroll-container" id="card1">
     <!-- Card 1 -->
-    <a class="card-link" href="/service-detail.html?service=hair-styling" aria-label="Open Hair Styling details">
+    <a class="card-link" href="./service-detail.html?service=hair-styling" aria-label="Open Hair Styling details">
       <div class="card " >
-        <img src="/img/hair.jpg" class="card-img-top" alt="Hair Styling">
+        <img src="./img/hair.jpg" class="card-img-top" alt="Hair Styling">
         <div class="card-body">
           <h5 class="card-title">Hair Styling</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
         </div>
         <div class="card-footer">
-          <a href="/contact.html"><button>CONTACT US</button></a>
+          <a href="./contact.html"><button>CONTACT US</button></a>
         </div>
       </div>
     </a>
 
     <!-- Card 2 -->
-    <a class="card-link" href="/service-detail.html?service=makeup" aria-label="Open Makeup details">
+    <a class="card-link" href="./service-detail.html?service=makeup" aria-label="Open Makeup details">
       <div class="card">
-        <img src="/img/bride.jpg" class="card-img-top" alt="Bridal Make-up">
+        <img src="./img/bride.jpg" class="card-img-top" alt="Bridal Make-up">
         <div class="card-body">
           <h5 class="card-title">Bridal Make-up</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
         <div class="card-footer">
-          <a href="/contact.html"><button>CONTACT US</button></a>
+          <a href="./contact.html"><button>CONTACT US</button></a>
         </div>
       </div>
     </a>
 
     <!-- Card 3 -->
-    <a class="card-link" href="/service-detail.html?service=bridal" aria-label="Open Bridal details">
+    <a class="card-link" href="./service-detail.html?service=bridal" aria-label="Open Bridal details">
       <div class="card">
-        <img src="/img/nails.jpg" class="card-img-top" alt="Nail Art">
+        <img src="./img/nails.jpg" class="card-img-top" alt="Nail Art">
         <div class="card-body">
           <h5 class="card-title">Nail Art</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
         </div>
         <div class="card-footer">
-          <a href="/contact.html"><button>CONTACT US</button></a>
+          <a href="./contact.html"><button>CONTACT US</button></a>
         </div>
       </div>
     </a>
 
     <!-- Card 4 (scrolls in) -->
-    <a class="card-link" href="/service-detail.html?service=skincare" aria-label="Open Skincare details">
+    <a class="card-link" href="./service-detail.html?service=skincare" aria-label="Open Skincare details">
       <div class="card">
-        <img src="/img/saree.jpg" class="card-img-top" alt="Saree Draping">
+        <img src="./img/saree.jpg" class="card-img-top" alt="Saree Draping">
         <div class="card-body">
           <h5 class="card-title">Saree Draping</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
         </div>
         <div class="card-footer">
-          <a href="/contact.html"><button>CONTACT US</button></a>
+          <a href="./contact.html"><button>CONTACT US</button></a>
         </div>
       </div>
     </a>
@@ -112,7 +112,7 @@
   <section class="about-section">
   <div class="about-container">
     <div class="about-image">
-      <img src="/img/logo.png" alt="Lumi Dest Logo">
+      <img src="./img/logo.png" alt="Lumi Dest Logo">
     </div>
 
     <div class="about-content">
@@ -135,10 +135,10 @@
         <div class="about-box">
           <h3>Explore</h3>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="/service.html">Services</a></li>
-            <li><a href="/contact.html">Contact us</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html#about">About</a></li>
+            <li><a href="./service.html">Services</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
           </ul>
         </div>
       </div>
@@ -151,9 +151,5 @@
     <p>© 2025 LumiDest. All Rights Reserved.</p>
   </div>
 </footer>
-
-<!-- ------------------------------------------------------------ -->
-<!-- bootstrap js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
