--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
@@ -31,19 +31,19 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+          <a class="nav-link" href="./index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#gallery">Our works</a>
+          <a class="nav-link" href="./index.html#gallery">Our works</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " aria-current="page" href="#about">About</a>
+          <a class="nav-link " href="./index.html#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/service.html">Service</a>
+          <a class="nav-link" href="./service.html">Service</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/contact.html">Contact us</a>
+          <a class="nav-link" href="./contact.html">Contact us</a>
         </li>
       </ul>
     </div>
@@ -72,7 +72,7 @@
             <button type="submit" id="contact_submit">SEND EMAIL</button>
         </form>
     </section>
-    <script src="email.js">
+    <script src="./email.js">
     </script>
 
 
@@ -83,7 +83,7 @@
   <section class="about-section">
   <div class="about-container">
     <div class="about-image">
-      <img src="/img/logo.png" alt="Lumi Dest Logo">
+      <img src="./img/logo.png" alt="Lumi Dest Logo">
     </div>
 
     <div class="about-content">
@@ -106,10 +106,10 @@
         <div class="about-box">
           <h3>Explore</h3>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="/service.html">Services</a></li>
-            <li><a href="/contact.html">Contact us</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html#about">About</a></li>
+            <li><a href="./service.html">Services</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
           </ul>
         </div>
       </div>
@@ -122,9 +122,5 @@
     <p>© 2025 LumiDest. All Rights Reserved.</p>
   </div>
 </footer>
-
-<!-- ------------------------------------------------------------ -->
-<!-- bootstrap js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
