--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
   </button>
 </div>
 
-
 <!-- ------------------------------------------------------------------------ -->
 <!-- gallery -->
 <section class="gallery" id="gallery">
@@ -91,7 +90,7 @@
 <section class="about-us" id="about">
   <div class="container">
     <div class="about-us__image">
-      <img src="/img/rithu.jpg" alt="Make-up artist at work">
+      <img src="./img/rithu.jpg" alt="Make-up artist at work">
     </div>
     <div class="about-us__content">
       <h2>About Me</h2>
@@ -102,18 +101,19 @@
   </div>
 </section>
 
-<!-- After about section -->
+<!-- ------------------------------------------------------------ -->
+<!-- testimonial -->
 <section class="testimonials" id="testimonials">
   <div class="container">
     <h2 class="testimonials-title">Client Stories</h2>
     <p class="testimonials-subtitle">What our beautiful clients say about their experience</p>
-    
     <div class="testimonials-grid">
+
       <div class="testimonial-card">
         <div class="testimonial-content">
           <p>"Rithu is an absolute artist! She did my bridal makeup and I couldn't have been happier. She understood exactly what I wanted and made me feel like the best version of myself."</p>
           <div class="testimonial-author">
-            <img src="/img/GAL1.jpg" alt="Sarah" class="author-image">
+            <img src="./img/GAL1.jpg" alt="Sarah" class="author-image">
             <div class="author-info">
               <h4>Arya S</h4>
               <p>Bridal Makeup</p>
@@ -126,7 +126,7 @@
         <div class="testimonial-content">
           <p>"Professional, punctual, and perfect results! I love how she enhanced my features while keeping the look natural. Definitely my go-to makeup artist for all special occasions."</p>
           <div class="testimonial-author">
-            <img src="/img/GAL4.jpg" alt="Emily" class="author-image">
+            <img src="./img/GAL4.jpg" alt="Emily" class="author-image">
             <div class="author-info">
               <h4>Meera R</h4>
               <p>Event Makeup</p>
@@ -139,7 +139,7 @@
         <div class="testimonial-content">
           <p>"Amazing attention to detail and such a warm personality! The makeup lasted all day through the photography session. Highly recommend for any special occasion!"</p>
           <div class="testimonial-author">
-            <img src="/img/GAL5.jpg" alt="Jessica" class="author-image">
+            <img src="./img/GAL5.jpg" alt="Jessica" class="author-image">
             <div class="author-info">
               <h4>Anjali K</h4>
               <p>Collab Makeup</p>
@@ -157,7 +157,7 @@
   <section class="about-section">
   <div class="about-container">
     <div class="about-image">
-      <img src="/img/logo.png" alt="Lumi Dest Logo">
+      <img src="./img/logo.png" alt="Lumi Dest Logo">
     </div>
 
     <div class="about-content">
@@ -182,8 +182,8 @@
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="/service.html">Services</a></li>
-            <li><a href="/contact.html">Contact us</a></li>
+            <li><a href="./service.html">Services</a></li>
+            <li><a href="./contact.html">Contact us</a></li>
           </ul>
         </div>
       </div>
@@ -196,9 +196,5 @@
     <p>© 2025 LumiDest. All Rights Reserved.</p>
   </div>
 </footer>
-
-<!-- ------------------------------------------------------------ -->
-<!-- bootstrap js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
