--- a/service-detail.html
+++ b/service-detail.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Service — LumiDest</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -15,14 +15,14 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navDemo" aria-controls="navDemo" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="/index.html">LumiDest</a>
+      <a class="navbar-brand" href="./index.html">LumiDest</a>
       <div class="collapse navbar-collapse" id="navDemo">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="/index.html#gallery">Our works</a></li>
-          <li class="nav-item"><a class="nav-link" href="/index.html#about">About</a></li>
-          <li class="nav-item"><a class="nav-link active" href="/service.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="/contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html#gallery">Our works</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="./service.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -33,7 +33,7 @@
     <div class="container">
       <nav aria-label="breadcrumb" class="mb-3">
         <ol class="breadcrumb bg-transparent p-0 mb-0">
-          <li class="breadcrumb-item"><a href="/service.html" class="text-decoration-none">Services</a></li>
+          <li class="breadcrumb-item"><a href="./service.html" class="text-decoration-none">Services</a></li>
           <li class="breadcrumb-item active" id="breadcrumbCurrent" aria-current="page">Service</li>
         </ol>
       </nav>
@@ -49,7 +49,7 @@
       <div class="row g-4 align-items-center">
         <div class="col-lg-6">
           <div class="detail-image rounded-3 overflow-hidden shadow-sm">
-            <img id="detailImage" src="/img/hair.jpg" alt="Service image" class="img-fluid w-100" style="object-fit:cover; height:420px;">
+            <img id="detailImage" src="./img/hair.jpg" alt="Service image" class="img-fluid w-100" style="object-fit:cover; height:420px;">
           </div>
         </div>
 
@@ -70,32 +70,29 @@
               <div class="mb-3">
                 <h6 style="color:var(--primary-green)">Features</h6>
                 <div id="featuresContainer" class="d-flex flex-wrap gap-2">
-                  <!-- feature pills inserted here -->
+                  <!-- feature-->
                 </div>
               </div>
 
               <div class="card-footer border-0 p-0 d-flex gap-2 align-items-center">
-                <a href="/contact.html" class="text-decoration-none">
+                <a href="./contact.html" class="text-decoration-none">
                   <button class="btn contact-cta" type="button">Contact us</button>
                 </a>
-                <a href="/service.html" class="btn btn-outline-secondary" style="color:var(--primary-green)">Back to services</a>
+                <a href="./service.html" class="btn btn-outline-secondary" style="color:var(--primary-green)">Back to services</a>
               </div>
             </div>
           </div>
-
-          <!-- Small testimonial / note -->
           <p class="mt-3 mb-0" id="contactNote" style="color:var(--secondary-green)"><small>Prefer an on-site consultation? Call +91 85900 83619 or email Lumidestmakeovers@gmail.com</small></p>
         </div>
       </div>
     </div>
   </main>
-
-  <!-- Footer (keeps same look & color codes) -->
+  <!-- Footer -->
   <footer class="footer">
     <section class="about-section">
       <div class="about-container">
         <div class="about-image">
-          <img src="/img/logo.png" alt="LumiDest Logo">
+          <img src="./img/logo.png" alt="LumiDest Logo">
         </div>
         <div class="about-content">
           <h2>LumiDest Makeover</h2>
@@ -109,9 +106,9 @@
             <div class="about-box">
               <h3>Explore</h3>
               <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/service.html">Services</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./service.html">Services</a></li>
+                <li><a href="./contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
@@ -125,7 +122,6 @@
   </footer>
 
   <script>
-    // simple client-side router: read ?service= and populate page
     (function(){
       const params = new URLSearchParams(location.search);
       const key = (params.get('service') || 'hair-styling').toLowerCase();
@@ -134,7 +130,7 @@
         'hair-styling': {
           title: 'Hair Styling',
           lead: 'Personalised hair styling for events, shoots and day-to-day elegance — tailored to your look and comfort.',
-          image: '/img/hair.jpg',
+          image: './img/hair.jpg',
           description: 'Our hair styling service includes consultation, trial (if requested), classic and contemporary techniques, and long-lasting setting. We use premium products to protect hair health while delivering the look you want.',
           duration: '60 - 120 mins',
           price: 'On request / Package based',
@@ -144,7 +140,7 @@
         'makeup': {
           title: 'Professional Makeup',
           lead: 'Enhance your natural beauty with flawless, camera-ready makeup tailored to your style and occasion.',
-          image: '/img/bride.jpg',
+          image: './img/bride.jpg',
           description: 'Our professional makeup service is designed to suit every occasion — from soft, natural day looks to glamorous evening transformations. Using premium skin-safe products.',
           duration: '60 – 120 mins',
           price: 'Customized as per look / Package available',
@@ -154,7 +150,7 @@
         'bridal': {
           title: 'Nail Art & Extensions',
           lead: 'Creative and long-lasting nail designs — from minimal elegance to bold statement looks.',
-          image: '/img/nails.jpg',
+          image: './img/nails.jpg',
           description: 'Enhance your style with our professional nail art and extension services. Whether you prefer chic minimalist designs, trendy gel nails. Perfect for brides, events, or everyday glam.',
           duration: '45 – 90 mins',
           price: 'Varies by design / Package available',
@@ -163,13 +159,13 @@
         },
         'skincare': {
           title: 'Saree Draping',
-  lead: 'Perfectly styled saree draping for every occasion — elegant, secure, and customized to your outfit and comfort.',
-  image: '/img/saree.jpg',
-  description: 'Experience the art of flawless saree draping with expert styling that enhances your overall look. We ensure every pleat and fold is perfectly placed for elegance, comfort, and confidence. Ideal for brides, bridesmaids, festive events, and photoshoots.',
-  duration: '30 – 60 mins',
-  price: 'Varies by style / Included in bridal packages',
-  includes: 'Draping consultation, pinning and styling',
-  features: ['Traditional & contemporary draping styles',]
+          lead: 'Perfectly styled saree draping for every occasion — elegant, secure, and customized to your outfit and comfort.',
+          image: './img/saree.jpg',
+          description: 'Experience the art of flawless saree draping with expert styling that enhances your overall look. We ensure every pleat and fold is perfectly placed for elegance, comfort, and confidence. Ideal for brides, bridesmaids, festive events, and photoshoots.',
+          duration: '30 – 60 mins',
+          price: 'Varies by style / Included in bridal packages',
+          includes: 'Draping consultation, pinning and styling',
+          features: ['Traditional & contemporary draping styles',]
         },
       };
 
@@ -189,14 +185,11 @@
       s.features.forEach(f => {
         const span = document.createElement('span');
         span.className = 'px-3 py-1 rounded-2';
-        // gold highlight if feature contains 'Heat' or similar
         span.style.background = 'rgba(13,98,82,0.06)';
         span.style.color = 'var(--primary-green)';
         span.textContent = f;
         featuresContainer.appendChild(span);
       });
-
-      // style contact CTA using existing site variables (adds classes here to avoid inline duplication)
       const cta = document.querySelector('.contact-cta');
       if (cta) {
         cta.style.padding = '10px 18px';
@@ -209,7 +202,6 @@
       }
     })();
   </script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
