--- a/service-detail.html
+++ b/service-detail.html
@@ -28,7 +28,7 @@
     </div>
   </nav>
 
-  <!-- Hero / Breadcrumb -->
+  <!-- header -->
   <header class="py-5" style="background: linear-gradient(180deg, rgba(249,244,231,0.6), transparent); padding-bottom: 0px !important;">
     <div class="container">
       <nav aria-label="breadcrumb" class="mb-3">
