--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lumidest Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -41,27 +41,13 @@
 </nav>
 
 <!-- --------------------------------------------------------------------------------- -->
-<!-- card  -->
+<!-- Banner  -->
 <div id="carouselExampleFade" class="carousel slide carousel-fade" id="#home">
-  <div class="carousel-inner">
+  <div class="carousel-inner active">
     <div class="carousel-item active">
       <img src="./IMG1.jpg" class="d-block w-100">
     </div>
-    <div class="carousel-item">
-      <img src="./img/IMG3.jpg" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="./IMG2.jpg" class="d-block w-100">
-    </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
 </div>
 
 <!-- ------------------------------------------------------------------------ -->
@@ -76,9 +62,9 @@
       <div class="gallery-item"><img src="./img/GAL2.jpg" alt="Makeup look 2"></div>
       <div class="gallery-item"><img src="./img/GAL3.jpg" alt="Makeup look 3"></div>
       <div class="gallery-item"><img src="./img/GAL4.jpg" alt="Makeup look 4"></div>
-      <div class="gallery-item"><img src="./img/GAL5.jpg" alt="Makeup look 5"></div>
-      <div class="gallery-item"><img src="./img/GAL6.jpg" alt="Makeup look 6"></div>
-      <div class="gallery-item"><img src="./img/GAL7.jpg" alt="Makeup look 7"></div>
+      <div class="gallery-item"><img src="./GAL5.jpg" alt="Makeup look 5"></div>
+      <div class="gallery-item"><img src="./GAL6.jpg" alt="Makeup look 6"></div>
+      <div class="gallery-item"><img src="./GAL7.jpg" alt="Makeup look 7"></div>
       <div class="gallery-item"><img src="./img/GAL8.jpg" alt="Makeup look 8"></div>
     </div>
   </div>
@@ -113,7 +99,7 @@
         <div class="testimonial-content">
           <p>"Rithu is an absolute artist! She did my bridal makeup and I couldn't have been happier. She understood exactly what I wanted and made me feel like the best version of myself."</p>
           <div class="testimonial-author">
-            <img src="./img/GAL1.jpg" alt="Sarah" class="author-image">
+            <img src="./img/GAL1.jpg" alt="Arya" class="author-image">
             <div class="author-info">
               <h4>Arya S</h4>
               <p>Bridal Makeup</p>
@@ -126,7 +112,7 @@
         <div class="testimonial-content">
           <p>"Professional, punctual, and perfect results! I love how she enhanced my features while keeping the look natural. Definitely my go-to makeup artist for all special occasions."</p>
           <div class="testimonial-author">
-            <img src="./img/GAL4.jpg" alt="Emily" class="author-image">
+            <img src="./img/GAL4.jpg" alt="Meera" class="author-image">
             <div class="author-info">
               <h4>Meera R</h4>
               <p>Event Makeup</p>
@@ -139,7 +125,7 @@
         <div class="testimonial-content">
           <p>"Amazing attention to detail and such a warm personality! The makeup lasted all day through the photography session. Highly recommend for any special occasion!"</p>
           <div class="testimonial-author">
-            <img src="./img/GAL5.jpg" alt="Jessica" class="author-image">
+            <img src="./GAL5.jpg" alt="Anjali" class="author-image">
             <div class="author-info">
               <h4>Anjali K</h4>
               <p>Collab Makeup</p>
@@ -176,12 +162,13 @@
           <p>Email: Lumidestmakeovers@gmail.com</p>
           <p>Address: Kesavadasapuram,trivandrum</p>
         </div>
+        
 
         <div class="about-box">
           <h3>Explore</h3>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html#about">About</a></li>
             <li><a href="./service.html">Services</a></li>
             <li><a href="./contact.html">Contact us</a></li>
           </ul>
