--- a/service-detail.html
+++ b/service-detail.html
@@ -120,6 +120,15 @@
       <p>© 2025 LumiDest. All Rights Reserved.</p>
     </div>
   </footer>
+  <!-- WhatsApp floating button -->
+<a class="whatsapp-float" href="https://wa.me/918590083619?text=Hi%20LumiDest%2C%20I%27d%20like%20to%20know%20more%20about%20your%20services." target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
+  <!-- white WhatsApp icon (SVG) -->
+  <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+    <path d="M20.52 3.48A11.86 11.86 0 0 0 12.01.5C6.11.5 1.52 5.09 1.52 11c0 1.94.52 3.74 1.42 5.33L.5 23.5l7.57-2.01a11.44 11.44 0 0 0 3.94.72c5.9 0 10.49-4.59 10.49-10.49 0-2.8-1.09-5.42-3.49-7.24z" fill="currentColor" opacity="0.08"/>
+    <path d="M17.6 14.1c-.3-.15-1.78-.88-2.06-.98-.28-.1-.49-.15-.7.15-.19.28-.74.98-.91 1.18-.17.2-.33.22-.61.07-.28-.15-1.18-.43-2.24-1.37-.83-.74-1.39-1.66-1.55-1.94-.16-.28-.02-.43.12-.57.12-.12.28-.33.42-.5.14-.17.18-.28.28-.47.1-.19.05-.35-.02-.5-.07-.15-.7-1.68-.96-2.3-.25-.6-.5-.52-.7-.53-.18-.01-.4-.01-.61-.01-.21 0-.55.07-.84.35-.28.28-1.07 1.04-1.07 2.54 0 1.5 1.1 2.95 1.25 3.15.15.2 2.16 3.33 5.23 4.66 3.06 1.33 3.06.89 3.61.84.55-.05 1.78-.72 2.03-1.42.25-.7.25-1.3.18-1.42-.07-.12-.27-.2-.57-.35z" fill="#fff"/>
+    <path d="M12.01 2.5c5.13 0 9.31 4.18 9.31 9.31 0 5.13-4.18 9.31-9.31 9.31-1.64 0-3.17-.42-4.53-1.15L3 21l1.0-4.06A9.29 9.29 0 0 1 2.7 11.81C2.7 6.68 6.89 2.5 12.01 2.5z" stroke="currentColor" stroke-opacity="0.12" stroke-width="0.6" fill="none"/>
+  </svg>
+</a>
 
   <script>
     (function(){
@@ -203,5 +212,6 @@
     })();
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
